fixed static file references

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 </button>
 
 <md-menu #menu="mdMenu">
-  <a href="/TomPiere.docx" md-menu-item>
+  <a href="assets/TomPiere.docx" md-menu-item>
     <md-icon>file_download</md-icon>
     Download my resume
   </a>
