--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -2,7 +2,7 @@
     <li class="row">
         <div class="projectWrapper">
             <div class="col-md-4">
-                <a href="http://www.dell.com/" class="companyLink"><img src="/images/dell-logo.jpg" alt="Dell logo"></a>
+                <a href="http://www.dell.com/" class="companyLink"><img src="images/dell-logo.jpg" alt="Dell logo"></a>
             </div>
             <div class="col-md-8">
                 <p>
