--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-12">
         <div class="row">
             <div class="col-md-6">
-                <a href="/assets/TomPiere.docx" class="btn btn-primary btn-lg">
+                <a href="assets/TomPiere.docx" class="btn btn-primary btn-lg">
                     <md-icon>file_download</md-icon> Download my resume</a>
             </div>
             <div class="col-md-6"><a href="mailto:tpiere@gmail.com" 
