--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
               <md-icon>build</md-icon> See what I've worked on</a></div>
         </div>
         <div class="row">
-            <div class="col-md-6"><a href="about.html" class="btn btn-primary btn-lg">
+            <div class="col-md-6"><a [routerLink]="['/about']" class="btn btn-primary btn-lg">
                    <md-icon>person</md-icon> Learn more about me</a></div>
         </div>
     </div>
