--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,15 +10,18 @@
             <md-icon>email</md-icon> Email me</a></div>
         </div>
         <div class="row">
-            <div class="col-md-6"><a href="technologies.html" class="btn btn-primary btn-lg">
+            <!--<div class="col-md-6"><a href="technologies.html" class="btn btn-primary btn-lg">
                 <i class="glyphicon glyphicon-education"></i>See what I know</a></div>
-                
+                -->
             <div class="col-md-6"><a [routerLink]="['/projects']"  class="btn btn-primary btn-lg">
               <md-icon>build</md-icon> See what I've worked on</a></div>
-        </div>
-        <div class="row">
-            <div class="col-md-6"><a [routerLink]="['/about']" class="btn btn-primary btn-lg">
+
+              <div class="col-md-6"><a [routerLink]="['/about']" class="btn btn-primary btn-lg">
                    <md-icon>person</md-icon> Learn more about me</a></div>
         </div>
+        <!--<div class="row">
+            <div class="col-md-6"><a [routerLink]="['/about']" class="btn btn-primary btn-lg">
+                   <md-icon>person</md-icon> Learn more about me</a></div>
+        </div>-->
     </div>
 </div>
