--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,12 @@
-/*
-@import '~@angular/material/core/theming/prebuilt/pink-bluegrey.css';
-*/
+
+/*@import '~@angular/material/core/theming/prebuilt/pink-bluegrey.css';*/
+
 
 
 @import '~@angular/material/core/theming/prebuilt/indigo-pink.css';
 
 
-/*
-@import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
-*/
+
+/*@import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';*/
 
 
