--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
    <md-icon>more_vert</md-icon>
 </button>
 
-<md-menu #menu="mdMenu">
+<md-menu x-position="before" #menu="mdMenu">
    <a [routerLink]="['/home']"  md-menu-item>
     <md-icon>home</md-icon>
     Home
